feat(ecp): revoke product sessions
